# yolo-sam-inference

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
D:\code\ai_cytometry\yolo-sam-inference-pipeline\project_inference_output/20250305_160827_2a0ff785/: cell_metrics.csv  gated_cell_metrics.csv  processing_times.csv  run_summary.txt
mlruns/0/: meta.yaml
opencv_project_inference_output/20250303_144452_e4ba9739/: contours.csv  processing_times.csv  roi_coordinates.json
opencv_project_inference_output/20250303_145054_70ed8c68/: contours.csv  processing_times.csv  roi_coordinates.json
opencv_project_inference_output/20250303_145812_572550b1/: contours.csv  processing_times.csv  roi_coordinates.json
opencv_project_inference_output/20250303_151549_fbce1d6d/: contours.csv  processing_times.csv  roi_coordinates.json
opencv_project_inference_output/20250303_152055_c91ace47/: roi_coordinates.json
opencv_project_inference_output/20250303_152457_e37e9903/: contours.csv  processing_times.csv  roi_coordinates.json
opencv_project_inference_output/20250305_153813_817a0ad1/: contours.csv  roi_coordinates.json
opencv_project_inference_output/20250305_155004_e88298ba/: cell_metrics.csv  deformability_summary.csv  processing_times.csv  roi_coordinates.json
opencv_project_inference_output/20250311_191204_153bde4a/: cell_metrics.csv  deformability_summary.csv  roi_coordinates.json
opencv_project_inference_output/20250311_193701_cc382da3/: cell_metrics.csv  (+1 more)
yolo_sam_inference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+67 files in other folders)
