[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_sam_inference"
version = "0.1.0"
authors = [
    { name="AI Cytometry Team" },
]
description = "A pipeline for cell segmentation using YOLO and SAM models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ultralytics",
    "transformers",
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "scikit-image",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
] 